--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "sonata-project/admin-bundle": "^3.35",
         "sonata-project/doctrine-orm-admin-bundle": "^3.6",
         "sonata-project/media-bundle": "^3.12",
+        "stfalcon/tinymce-bundle": "^2.3",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
