--- a/config/packages/sonata_admin.yaml
+++ b/config/packages/sonata_admin.yaml
@@ -3,6 +3,9 @@ sonata_admin:
     dashboard:
         blocks:
             - { type: sonata.admin.block.admin_list, position: left }
+    templates:
+        edit: 'Admin/edit.html.twig'
+        # create: 'Admin/create.html.twig'
 
 sonata_block:
     blocks:
