--- a/config/packages/sonata_admin.yaml
+++ b/config/packages/sonata_admin.yaml
@@ -1,5 +1,6 @@
 sonata_admin:
-    title: 'Sonata Admin'
+    title: 'The Ineluctable'
+    title_logo: images/thumb-03.jpg
     dashboard:
         blocks:
             - { type: sonata.admin.block.admin_list, position: left }
