--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,6 +27,13 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
+    cart_manager:
+        class: App\Service\CartManager
+        arguments: ["@session"]
+        public: true
+
+    # SONATA ADMIN
+
     admin.category_product:
         class: App\Admin\CategoryProductAdmin
         arguments: [~, App\Entity\CategoryProduct, ~]
