--- a/config/packages/sonata_admin.yaml
+++ b/config/packages/sonata_admin.yaml
@@ -8,7 +8,7 @@ sonata_admin:
         edit: 'Admin/edit.html.twig'
         # create: 'Admin/create.html.twig'
     assets:
-        extra_stylesheets: ['build/css/skins/lightgray/skin.css', 'build/css/skins/lightgray/content.css', 'build/css/admin.css']
+        extra_stylesheets: ['build/js/skins/lightgray/skin.min.css', 'build/js/skins/lightgray/content.min.css', 'build/css/admin.css']
         extra_javascripts: ['build/manifest.js', 'build/vendor.js', 'build/js/jquery-tinymce.js', 'build/js/tinymce.js', 'build/js/themes/modern/theme.js', 'build/js/plugins/image/plugin.js', 'build/js/plugins/lists/plugin.js', 'build/js/plugins/textcolor/plugin.js', 'build/js/plugins/link/plugin.js', 'build/js/app.js']
 
 sonata_block:
