--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "friendsofsymfony/user-bundle": "^2.0",
         "sensio/framework-extra-bundle": "^5.1",
         "sonata-project/admin-bundle": "^3.35",
@@ -82,7 +83,7 @@
     "extra": {
         "symfony": {
             "id": "01CCGCWV6DNZAJKMPCSK5JG2M0",
-            "allow-contrib": false
+            "allow-contrib": "true"
         }
     }
 }
