--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "symfony/web-link": "^4.0",
         "symfony/webpack-encore-pack": "*",
         "symfony/yaml": "^4.0",
+        "twig/extensions": "^1.5",
         "white-october/pagerfanta-bundle": "^1.1"
     },
     "require-dev": {
