--- a/config/packages/sonata_admin.yaml
+++ b/config/packages/sonata_admin.yaml
@@ -3,7 +3,7 @@ sonata_admin:
     title_logo: images/logo.png
     dashboard:
         blocks:
-            - { type: sonata.admin.block.admin_list, position: left }
+            - { type: sonata.admin.block.admin_list, position: center }
     templates:
         edit: 'Admin/edit.html.twig'
         # create: 'Admin/create.html.twig'
