add Oauth on restApi

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -31,3 +31,4 @@ doctrine:
                 alias: App
             ApplicationSonataMediaBundle: ~
             SonataMediaBundle: ~
+            FOSOAuthServerBundle: ~
